platform/policies/tests/require-pss-restricted-clusterwide/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: some-app-team
---
apiVersion: v1
kind: Namespace
metadata:
  name: another-app-team
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
